Fixed some layout issues

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr 0.2fr 1fr;
+  grid-template-rows: 1fr 1fr 0.2fr;
   grid-gap: 10px;
 }
 
@@ -19,21 +19,41 @@ h1 {
 }
 
 .camera {
-  grid-row: 3;
-  grid-column: 2;
+  grid-row: 2;
+  grid-column: 1;
   display: grid;
   justify-content: center;
+  width: 100%;
 }
 
 #startbutton {
-  display: flex;
-  align-self: flex-start;
-  width: 50%;
 }
 
 .output {
-  grid-row: 4;
-  grid-column: 2;
+  grid-row: 2;
+  grid-column: 3;
   display: flex;
   justify-self: center;
+}
+
+#photo {
+  width: 320px;
+  height: 240px;
+}
+
+button {
+  background-color: #000080;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+
+#filters {
+  grid-row: 1;
+  grid-column: 1;
 }
